tests/errors/test_63.x
// Alias does not exist for module access

fn main() -> void {

    let x = Math::add(1, 2);

	let y = True::Condition.WHAT;

}
